--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ author:
   pronouns         : "he/him"  
   bio              : "Undergraduate CS student at Emory University specializing in AI, Data Science, and Deep Learning applications."
   location         : "Atlanta, US"
-  employer         : 
+  employer         : "Emory University"
   uri              : 
   email            : "rwan388@emory.edu" 
 
