--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 # Basic Site Settings
 locale                   : "en-US"
 site_theme               : "default"
-title                    : "Your Name / Site Title"
+title                    : "Ruiyu Wang"
 title_separator          : "-"
 name                     : &name "Your Name"
 description              : &description "personal description"
@@ -22,7 +22,7 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "myFace.PNG"
+  avatar           : "myFace.png"
   name             : "Ruiyu Wang"
   pronouns         : "he/him"  
   bio              : "Undergraduate CS student at Emory University specializing in AI, Data Science, and Deep Learning applications."
