--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : "JonathanWry/JonathanWry.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "myFace.jpg"
+  avatar           : "myFace.png"
   name             : "Ruiyu Wang"
   pronouns         : "he/him"  
   bio              : "Undergraduate CS student at Emory University specializing in AI, Data Science, and Deep Learning applications."
