--- a/_config.yml
+++ b/_config.yml
@@ -22,10 +22,10 @@ repository               : "JonathanWry/JonathanWry.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : 
+  avatar           : "myFace.png"
   name             : "Ruiyu Wang"
   pronouns         : "he/him"  
-  bio              : "Undergraduate CS student at Emory University specializing in AI, Data Science, and Deep Learning applications."
+  bio              : "Undergraduate CS student at Emory University specializing in AI and Deep Learning applications."
   location         : "Atlanta, US"
   employer         : "Emory University"
   uri              : 
@@ -50,7 +50,7 @@ author:
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
   # Social media
-  bluesky          : "bsky.app" # Replace this with you Bluesky username
+  bluesky          : #"bsky.app" # Replace this with you Bluesky username
   facebook         : # Username
   flickr           : # Username
   foursquare       : # Username
